Fixes no search results layout bug and adds link to beckley repo.

--- a/static/_sass/_custom.scss
+++ b/static/_sass/_custom.scss
@@ -2070,7 +2070,7 @@ $max-width: 100%; //this is setting the width of outer-container.
     float: left;
     color: $dark-gray;
     background-color: white;
-    padding: 9px 10px 9px 10px;
+    padding: 11px 10px 11px 10px;
     border-top: 1px solid black; 
     border-right: 1px solid black;   
     border-bottom: 3px solid black;
